Added new ports and removed name filters.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
         <h3> <i>created by vno</i> </h3>
         <p> I made this port filter for personal use, as a way to study the common port numbers as well as keep track of any important ones when it comes to the basics of networking fundamentals. Also, it's a useful tool to quickly search between port numbers and the service names associated with it. </p>
         
-        <p id="portName">Port: &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; Name: </p>
-        
         <input type="text" id="portInput" autofocus="autofocus" onkeyup="filterPort()" placeholder="Search by port number...">
 
         <input type="text" id="nameInput" onkeyup="filterName()" placeholder="Search by service name...">
@@ -129,16 +127,10 @@
                 <td>A client pulls an email from the email server and creates a local copy unto the local device. Any changes on the local device will sync with the email server. The email server saves a copy unto the server itself. Thus, if the client decides to switch devices, it can pull the any changed data from the email server once again.</td>
             </tr>
             <tr>
-                <td>161</td>
-                <td>TCP</td>
+                <td>161, 162</td>
+                <td>Both</td>
                 <td>Simple Network Management Protocol (SNMP)</td>
-                <td>#</td>
-            </tr>
-            <tr>
-                <td>162</td>
-                <td>UDP</td>
-                <td>Simple Network Management Protocol (SNMP)</td>
-                <td>#</td>
+                <td>SNMP is for collecting and organizing information about managed devices on IP networks and for modifying that information to change device behavior. Devices that typically support SNMP include cable modems, routers, switches, servers, workstations, printer, etc.</td>
             </tr>
             <tr>
                 <td>389</td>
